# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/
[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Uni-pKa"
version = "0.1.0"
description = "Uni-pKa"
readme = "README.md"
authors = ["Dynamics Eng <iso-dynamics-eng@isomorphiclabs.com>"]
repository = "https://github.com/emarsden-iso/Uni-pKa"
homepage = "https://github.com/emarsden-iso/Uni-pKa"
# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  #! Update me
packages = [{include = "unipka", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
tqdm = "^4.66.4"
rdkit = "^2023.9.6"

[[tool.poetry.source]]
name = "isolabs"
url = "https://europe-python.pkg.dev/isolabs-builds/isolabs-virtual/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"
